<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondomusica"
    tools:context=".MainActivity">

    <!--creamos y ponemos una imagen de referencia para darle un poco de diseño (este es algo
      adicinal) -->
    <ImageView
        android:id="@+id/imgmusica"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/imgmusica"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/btnreproducir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"/>

    <!--creamos los botones principales de que nos pide como es es el de (REPRODUCIR, PAUSAR Y
      DETENER) y ademas cramos los botones adicinales (ATRAS, SIGUIENTE Y ALEATORIO). Cada boton
      con su respectivo tamaño, posion y texto respectivo que este esta llamndo a los que seria
       string/...., que este se encuentra en values - themes - strings.xml-->
    <Button
        android:id="@+id/btnreproducir"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgreproducir"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/btnpausar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgpausa"
        app:layout_constraintTop_toBottomOf="@id/btnreproducir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btndetener"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgdetener"
        app:layout_constraintTop_toBottomOf="@id/btnpausar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/btnatras"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgatras"
        app:layout_constraintTop_toBottomOf="@id/btnreproducir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnsiguiente"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgsiguiente"
        app:layout_constraintTop_toBottomOf="@id/btnreproducir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnaleatorio"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/msgaleatorio"
        app:layout_constraintTop_toBottomOf="@id/btnsiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>